// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en <GifExpertApp /> debe renderizarse correctamente 1`] = `
<Fragment>
  <h2>
    GIFS APP
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`pruebas en <GifExpertApp /> deben mostrarse correctamente las categorias 1`] = `
<Fragment>
  <h2>
    GIFS APP
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="batman"
      key="batman"
    />
    <GifGrid
      category="hunter x hunter"
      key="hunter x hunter"
    />
  </ol>
</Fragment>
`;
